--- a/frontend/myapp/src/components/Principal/Principal.css
+++ b/frontend/myapp/src/components/Principal/Principal.css
@@ -32,7 +32,7 @@ html, body {
   z-index: 1001;
   width: 45px;
   height: 45px;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background:  #4338ca !important;
   border: none;
   border-radius: 10px;
   cursor: pointer;
@@ -120,7 +120,7 @@ html, body {
 .logo-circle {
   width: 40px;
   height: 40px;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background:  #4338ca !important;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -296,7 +296,7 @@ html, body {
 }
 
 .create-pass-btn {
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background:  #4338ca !important;
   color: white;
   border: none;
   padding: 14px 24px;
@@ -339,7 +339,7 @@ html, body {
 
 /* Welcome Card */
 .welcome-card {
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: #4338ca !important;
   border-radius: 20px;
   padding: 40px;
   margin-bottom: 40px;
@@ -347,9 +347,10 @@ html, body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 20px 60px rgba(102, 126, 234, 0.3);
+  box-shadow: 0 20px 60px rgba(67, 56, 202, 0.3);
   width: 100%;
 }
+
 
 .welcome-content h2 {
   font-size: 28px;
