otp is just lag should change and password changing made faster

--- a/frontend/myapp/src/components/Admin/Admin.css
+++ b/frontend/myapp/src/components/Admin/Admin.css
@@ -989,6 +989,7 @@ html, body {
   .user-info {
     padding: 15px;
     margin-bottom: 25px;
+    background-color: black;
   }
   
   .user-avatar {
